--- a/app/static/locales/en.json
+++ b/app/static/locales/en.json
@@ -13,7 +13,8 @@
     "scanningFiles": "Scanning Files",
     "remainFiles": "Remaining Files",
     "remainTime": "Estimated Remaining Time",
-    "scanProgress": "Scanning Progress"
+    "scanProgress": "Scanning Progress",
+    "fileWatchStatus": "File Watch Status"
   },
   "buttons": {
     "scan": "Scan",
@@ -55,7 +56,8 @@
     "matchingTimeRange": "Matching Time Range (seconds)",
     "downloadVideoClip": "Download Video Clip",
     "imageSearch": "Search Images",
-    "imageVideoSearch": "Search Videos"
+    "imageVideoSearch": "Search Videos",
+    "copyPath": "Copy Path"
   },
   "pexelsResults": {
     "viewCount": "View Count",
@@ -65,6 +67,8 @@
     "searchContentEmpty": "At least one search content or search path must be entered",
     "textContentEmpty": "Text content cannot be empty",
     "clipboardCopySuccess": "Path copied to clipboard",
+    "pathCopied": "Path copied to clipboard",
+    "copyFailed": "Copy failed",
     "totalSearchResult": "Total search results: ",
     "photos": " photos",
     "videos": " videos",
