--- a/app/static/locales/zh.json
+++ b/app/static/locales/zh.json
@@ -13,7 +13,8 @@
     "scanningFiles": "本次扫描文件数",
     "remainFiles": "待扫描文件数",
     "remainTime": "预估剩余时间",
-    "scanProgress": "扫描进度"
+    "scanProgress": "扫描进度",
+    "fileWatchStatus": "文件监控状态"
   },
   "buttons": {
     "scan": "扫描",
@@ -55,7 +56,8 @@
     "matchingTimeRange": "匹配的时间段范围（秒）",
     "downloadVideoClip": "下载视频片段",
     "imageSearch": "以图搜图",
-    "imageVideoSearch": "以图搜视频"
+    "imageVideoSearch": "以图搜视频",
+    "copyPath": "复制路径"
   },
   "pexelsResults": {
     "viewCount": "播放量",
@@ -65,6 +67,8 @@
     "searchContentEmpty": "搜索内容或搜索路径至少需要输入一个",
     "textContentEmpty": "文字内容不能为空",
     "clipboardCopySuccess": "路径已复制到剪贴板",
+    "pathCopied": "路径已复制到剪贴板",
+    "copyFailed": "复制失败",
     "totalSearchResult": "共搜索出来",
     "photos": "张图片",
     "videos": "条视频",
